<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_connect"
            android:checkable="false"
            android:title="@string/connect" />
        <item
            android:id="@+id/menu_eject"
            android:checkable="false"
            android:title="@string/eject" />
        <item
            android:id="@+id/stop_roast"
            android:checkable="false"
            android:title="@string/stopRoast" />
        <item
            android:id="@+id/menu_disconnect"
            android:checkable="false"
            android:title="@string/disconnect" />
        <item
            android:id="@+id/menu_dev"
            android:checkable="false"
            android:title="@string/devOptions" />
    </group>
</menu>